# fx-generator

./: .gitignore  01-PRD-产品需求文档.md  02-技术方案.md  04-EC调研笔记.md  99-抖音特效市场企划.md  INSTALL-WINDOWS.md  LEARNINGS.md  README.md  app.py  pyproject.toml  start.bat  start.sh
_archive-v0/: 01-PRD-产品需求文档.md  02-技术架构与选型.md  03-任务分解与执行计划.md  04-节点系统设计.md  05-多平台导出器规范.md  06-模型集成与后端路由.md  07-安全合规与红线清单.md  08-接口契约.md
_archive-v0.1/: 03-工作流手册.md  05-GitHub调研与skill计划.md
docs/: 多Provider适配计划.md
douyinfx/: __init__.py  __main__.py  cli.py
lib/: api_client.py  config.py  matting.py  normalize.py  packager.py  prompts.py  safety.py
lib/providers/: __init__.py  agnes_provider.py  base.py  local_sdxl.py  openai_provider.py
prompts/: face_paint_template.md
scripts/: check_env.py  download_models.py
workflows/: _common.py  s1_face_paint.py
