[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fxgen"
version = "0.1.1"
description = "面部特效素材生成工具：AI 出贴图 → 抠图 → 规范化 → 素材包，配合抖音 Douyin AR (Effect Creator) 上架"
requires-python = ">=3.11"
authors = [{ name = "farromars" }]
dependencies = [
    # ── 核心运行时 ──
    "rembg>=2.0",
    "onnxruntime>=1.17",
    "Pillow>=10",
    "pydantic>=2",
    "gradio>=5",
    "openai>=1.40",
    "httpx>=0.27",
    "click>=8",
    "huggingface_hub>=0.24",
]

[project.optional-dependencies]
# ── 本机推理（CUDA / mps）──
# 注意：torch 不在这里固定，因为 Windows CUDA / macOS mps / Linux CUDA 需要
# 不同的 wheel 源。请按 INSTALL-WINDOWS.md / INSTALL-MAC.md 单独装 torch 后再装这组。
local = [
    "diffusers>=0.30",
    "transformers>=4.44",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "peft>=0.10",
]
dev = ["ruff>=0.5"]

[project.scripts]
fxgen = "app:launch"

[tool.setuptools.packages.find]
include = ["lib*", "workflows*", "scripts*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
